# python-tricircleclient

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.md  README.rst  lower-constraints.txt  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: api.rst  conf.py  index.rst
releasenotes/notes/: drop-py-2-7-3c68ac538cef7e83.yaml
tricircleclient/: client.py  constants.py  exceptions.py  i18n.py  osc.py  utils.py  version.py
tricircleclient/tests/unit/: fakes.py  test_exceptions.py  utils.py
tricircleclient/tests/unit/v1/: test_jobs_cli.py  test_pod_cli.py  test_pods_cli.py  test_routings_cli.py
tricircleclient/v1/: base.py  client.py  jobs.py  jobs_cli.py  pods.py  pods_cli.py  routings.py  routings_cli.py
