[metadata]
name = tricircleclient
summary = Python client library for Tricircle
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/python-tricircleclient/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    tricircleclient

[entry_points]
openstack.cli.extension =
    multiregion_networking = tricircleclient.osc

openstack.multiregion_networking.v1 =
    multiregion_networking_pod_list = tricircleclient.v1.pods_cli:ListPods
    multiregion_networking_pod_create = tricircleclient.v1.pods_cli:CreatePod
    multiregion_networking_pod_show = tricircleclient.v1.pods_cli:ShowPod
    multiregion_networking_pod_delete = tricircleclient.v1.pods_cli:DeletePod
    multiregion_networking_routing_list = tricircleclient.v1.routings_cli:ListRoutings
    multiregion_networking_routing_create = tricircleclient.v1.routings_cli:CreateRouting
    multiregion_networking_routing_show = tricircleclient.v1.routings_cli:ShowRouting
    multiregion_networking_routing_delete = tricircleclient.v1.routings_cli:DeleteRouting
    multiregion_networking_routing_update = tricircleclient.v1.routings_cli:UpdateRouting


[extras]
test =
  coverage>=4.0 # Apache-2.0
  python-subunit>=0.0.18 # Apache-2.0/BSD
  oslotest>=1.10.0 # Apache-2.0
  tempest>=14.0.0 # Apache-2.0
  testrepository>=0.0.18 # Apache-2.0/BSD
  testtools>=1.4.0 # MIT
doc =
  sphinx>=1.5.1 # BSD
  oslosphinx>=4.7.0 # Apache-2.0

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[pbr]
autodoc_index_modules = true
autodoc_exclude_modules =
  tricircleclient.tests.*

[wheel]
universal = 1
