[metadata]
name = tricircleclient
summary = Python client library for Tricircle
description-file =
    README.md
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/python-tricircleclient/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    tricircleclient

[entry_points]
openstack.cli.extension =
    multiregion_networking = tricircleclient.osc

openstack.multiregion_networking.v1 =
    multiregion_networking_pod_list = tricircleclient.v1.pods_cli:ListPods
    multiregion_networking_pod_create = tricircleclient.v1.pods_cli:CreatePod
    multiregion_networking_pod_show = tricircleclient.v1.pods_cli:ShowPod
    multiregion_networking_pod_delete = tricircleclient.v1.pods_cli:DeletePod
    multiregion_networking_routing_list = tricircleclient.v1.routings_cli:ListRoutings
    multiregion_networking_routing_create = tricircleclient.v1.routings_cli:CreateRouting
    multiregion_networking_routing_show = tricircleclient.v1.routings_cli:ShowRouting
    multiregion_networking_routing_delete = tricircleclient.v1.routings_cli:DeleteRouting
    multiregion_networking_routing_update = tricircleclient.v1.routings_cli:UpdateRouting
    multiregion_networking_job_list = tricircleclient.v1.jobs_cli:ListJobs
    multiregion_networking_job_create = tricircleclient.v1.jobs_cli:CreateJob
    multiregion_networking_job_show = tricircleclient.v1.jobs_cli:ShowJob
    multiregion_networking_job_delete = tricircleclient.v1.jobs_cli:DeleteJob
    multiregion_networking_job_redo = tricircleclient.v1.jobs_cli:RedoJob


[extras]
test =
  coverage!=4.4,>=4.0 # Apache-2.0
  python-subunit>=1.0.0 # Apache-2.0/BSD
  tempest>=17.1.0 # Apache-2.0
  testrepository>=0.0.18 # Apache-2.0/BSD
  testtools>=2.2.0 # MIT
doc =
  sphinx!=1.6.6,!=1.6.7,>=1.6.2 # BSD
  oslosphinx>=4.7.0 # Apache-2.0

[wheel]
universal = 1

[pbr]
autodoc_tree_index_modules = True
autodoc_tree_excludes =
    setup.py
    tricircleclient/tests/
api_doc_dir = api

[build_sphinx]
all-files = 1
build-dir = doc/build
source-dir = doc/source
warning-is-error = 1
